--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
 	},
 	"scripts": {
 		"start": "node server",
-		"server": "nodemon server"
+		"server": "nodemon server",
+		"frontend": "npm start --prefix frontend",
+		"dev": "concurrently \"npm run server\" \"npm run frontend\""
 	},
 	"repository": {
 		"type": "git",
